Fixed: scrollbar was displayed behind footer

--- a/public/css/sass/cattool.scss
+++ b/public/css/sass/cattool.scss
@@ -38,7 +38,7 @@ body.cattool {
 	background-color: #fafafa;
 	padding: 0 12px 0 14px;
 	width: 100%;
-	position: fixed;
+	position: relative;
 	bottom: 0;
 	left: 0;
 	z-index: 2;
